#pragma once

#include "src/presenter/modelview/ActuatorCardViewModel.h"
#include "src/presenter/modelview/BackendHealthViewModel.h"
#include "src/presenter/modelview/QualityCheckpointViewModel.h"
#include "src/presenter/modelview/ControlPanelViewModel.h"
#include "src/presenter/modelview/WorkUnitViewModel.h"
#include "src/presenter/modelview/EquipmentCardViewModel.h"
#include "src/presenter/modelview/InspectionResultViewModel.h"
#include "src/presenter/modelview/PlaceholderViewModels.h"
#include <string>

namespace app {

/// Interface for Views that observe Presenter state changes
///
/// Views implement this interface to receive notifications from Presenter.
/// This is the core of the Observer pattern implementation in our MVP architecture.
///
/// @note All methods are called from Presenter thread!
///       Views must handle thread-safety (e.g., using Glib::Dispatcher for GTK).
///
/// @design The interface uses empty default implementations instead of pure virtual
///         to allow views to only override methods they need. This follows the
///         Interface Segregation Principle.
class ViewObserver {
public:
    ViewObserver() = default;
    virtual ~ViewObserver() = default;

    // Delete copy/move operations - observers should have stable addresses
    ViewObserver(const ViewObserver&) = delete;
    ViewObserver& operator=(const ViewObserver&) = delete;
    ViewObserver(ViewObserver&&) = delete;
    ViewObserver& operator=(ViewObserver&&) = delete;

    /// Called when production work unit information changes (new work, progress update)
    /// @param viewModel Display-ready data for work unit info widget
    virtual void onWorkUnitChanged([[maybe_unused]] const presenter::WorkUnitViewModel& viewModel) {}

    /// Called when a critical error occurs that should be shown to the user
    /// @param errorMessage Human-readable error description
    virtual void onError([[maybe_unused]] const std::string& errorMessage) {}

    /// Called when process configuration dialog should be shown
    /// @param viewModel Data for the configuration confirmation dialog
    /// @note Default: empty (for views that don't support configuration dialogs)
    virtual void onActionRequired([[maybe_unused]] const presenter::ProcessConfigDialogViewModel& viewModel) {}

    /// Called when configuration dialog settings were saved successfully
    /// View should close the dialog and show success feedback
    virtual void onActionCompleted() {}

    /// Called when configuration dialog settings failed to save
    /// @param errorMessage Reason for failure
    virtual void onActionFailed([[maybe_unused]] const std::string& errorMessage) {}

    /// Called when test run completes successfully
    /// View should show test completion dialog for operator approval
    virtual void onTestCompleted() {}

    /// Called when products list has been loaded from database
    /// @param viewModel Contains array of products with metadata
    virtual void onProductsLoaded([[maybe_unused]] const presenter::ProductsViewModel& viewModel) {}

    /// Called when product data is ready for viewing (ViewProductDialog should be shown)
    /// @param viewModel Complete product details for read-only display
    virtual void onViewProductReady([[maybe_unused]] const presenter::ViewProductDialogViewModel& viewModel) {}

    /// Called when reset confirmation is requested (ResetProductDialog should be shown)
    /// @param viewModel The reset dialog view model with product info and reset options
    virtual void
    onResetProductRequested([[maybe_unused]] const presenter::ResetProductDialogViewModel& viewModel) {}

    /// Called when product reset completes
    /// @param success True if resetting was successful
    /// @param message Success or error message to display
    virtual void onProductReset([[maybe_unused]] bool success, [[maybe_unused]] const std::string& message) {}

    /// Called when a product's recipe is loaded onto the production line
    /// (Products page "Load Recipe" action). The view shows a toast.
    /// @param success True if a recipe was found and applied
    /// @param message Success or "no recipe defined" message to display
    virtual void onRecipeLoaded([[maybe_unused]] bool success, [[maybe_unused]] const std::string& message) {}

    /// Called when equipment station status changes
    /// @param viewModel Equipment status data (supplies, connectivity, operational state)
    /// @note Can be called up to 10 times per second during active production
    virtual void onEquipmentCardChanged([[maybe_unused]] const presenter::EquipmentCardViewModel& viewModel) {}

    /// Called when actuator equipment status changes
    /// @param viewModel Actuator status data (position, mode, alerts, auto mode)
    /// @note Can be called up to 10 times per second during active production
    virtual void onActuatorCardChanged([[maybe_unused]] const presenter::ActuatorCardViewModel& viewModel) {}
    
    /// Called when quality checkpoint status changes
    /// @param viewModel Quality checkpoint data (pass rate, defects, inspection stats)
    virtual void onQualityCheckpointChanged([[maybe_unused]] const presenter::QualityCheckpointViewModel& viewModel) {}

    /// Called when header status bar should update (connectivity indicators)
    /// @param viewModel Network status, DB connectivity, system health
    virtual void onHeaderStatusChanged([[maybe_unused]] const presenter::HeaderStatusViewModel& viewModel) {}

    /// Called when control panel button states change (enabled/disabled)
    /// @param viewModel Button availability based on current system state
    /// @design This is driven by a state machine in the presenter - view just renders
    virtual void onControlPanelChanged([[maybe_unused]] const presenter::ControlPanelViewModel& viewModel) {}

    /// Called when the integration-backend health snapshot refreshes.
    /// Driven by `BackendHealthPresenter::poll()` on a polling timer
    /// (the manager itself doesn't push events when a backend's
    /// internal state shifts -- the presenter polls + diffs).
    virtual void onBackendHealthChanged([[maybe_unused]] const presenter::BackendHealthViewModel& viewModel) {}

    /// Called when a process step completes or fails
    /// @param viewModel Step identifier, completion status, coordinates
    /// @note View should update the process visualization
    virtual void onProcessStepChanged([[maybe_unused]] const presenter::ProcessStepViewModel& viewModel) {}

    /// Called when system error status changes
    /// @param viewModel Aggregated error state translated to display-ready format
    /// @note View should update the status zone banner (background color + message)
    virtual void onStatusZoneChanged([[maybe_unused]] const presenter::StatusZoneViewModel& viewModel) {}

    // Reset Process Panel state management
    /// Called to show the reset panel in "choosing action" state
    /// Panel shows: title + "Choose an action:" + both buttons enabled
    virtual void onResetProcessShowChoosing() {}

    /// Called to show the reset panel in "waiting for equipment" state
    /// Panel shows: title + "Please bring equipment to home position" + one button highlighted
    /// @param restartSelected true if "Restart process" was selected, false if "Release work unit"
    virtual void onResetProcessShowWaitingForEquipment([[maybe_unused]] bool restartSelected) {}

    /// Called to hide the reset panel completely
    virtual void onResetProcessHide() {}

    /// Edge AI inspection callbacks
    ///
    /// Lifecycle for one `inspectFile` call:
    ///   1. `onInspectionStarted(path)`  -- view shows spinner / disables
    ///      the inspect button so the operator cannot fire two requests
    ///      while the first is in flight.
    ///   2. Either `onInspectionCompleted(viewModel)` on success, OR
    ///      `onInspectionFailed(path, message)` on decode / inference
    ///      error. Exactly one of these fires per started call.
    /// Called when an inspection run begins.
    /// @param sourcePath absolute path of the image being inspected.
    virtual void onInspectionStarted([[maybe_unused]] const std::string& sourcePath) {}

    /// Called when an inspection run completes successfully.
    /// @param viewModel top-K classifications + latency + source path.
    virtual void
        onInspectionCompleted([[maybe_unused]] const presenter::InspectionResultViewModel& viewModel) {}

    /// Called when an inspection run fails.
    /// @param sourcePath the path that failed.
    /// @param errorMessage human-readable cause.
    virtual void onInspectionFailed([[maybe_unused]] const std::string& sourcePath,
                                    [[maybe_unused]] const std::string& errorMessage) {}
};

}  // namespace app
